--- a/step-02/journal/package.json
+++ b/step-02/journal/package.json
@@ -2,10 +2,15 @@
   "name": "journal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "aws-amplify": "^0.3.3",
     "aws-amplify-react": "^0.1.43",
     "aws-sdk": "^2.229.1",
+    "cordova": "^8.0.0",
+    "cordova-android": "^7.0.0",
+    "cordova-browser": "^5.0.3",
+    "cordova-plugin-whitelist": "^1.3.3",
     "hoek": "^5.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -16,8 +21,17 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build  && robocopy .\\build .\\www /MIR",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "cordova": {
+    "platforms": [
+      "android",
+      "browser"
+    ],
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    }
   }
 }
